# investment-simulator

./: .gitignore  README.md  pyproject.toml
investment_simulator/: __init__.py  data_processor.py  data_retriever.py  get_agg_metrics.py  get_ts_metrics.py  optimizer_object.py  set_constraints.py  set_objective.py  set_variables.py  simulator.py  utils.py
investment_simulator/config/: __init__.py  logging.py
notebooks/: sample_notebook.ipynb
