[project]
name = "investment_simulator"
version = "0.0.1"
authors = [
  { name="Qiana Yang", email="qianayangml@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "black == 24.2.0",
    "cvxpy == 1.4.2",
    "pandas == 2.2.1",
    "pyyaml == 6.0.1",
    "requests == 2.31.0",
    "scikit-learn == 1.4.1.post1"
]
keywords = [
    "investment",
    "investment simulator",
    "portfolio optimizer"
]

[project.scripts]
invest = "investment_simulator.main:main"

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["investment_simulator"]